separate versions for build

--- a/Dockerfile-8
+++ b/Dockerfile-8
@@ -1,5 +1,4 @@
-ARG VERSION=11
-FROM openjdk:${VERSION}
+FROM openjdk:8
 COPY ./MemoryMain.java /src/MemoryMain.java
 WORKDIR /src
 RUN java -version
